--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.3.RELEASE</version>
+		<version>1.5.9.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -57,6 +57,37 @@
     		<artifactId>commons-lang3</artifactId>
     		<version>3.5</version>
 		</dependency>
+
+		<!-- Oracle -->
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.2.0.1</version>
+		</dependency>
+
+		<!-- DB2 -->
+		<dependency>
+			<groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>licences</artifactId>
+			<version>1.0</version> <!-- Adjust this properly -->
+			<scope>system</scope>
+			<systemPath>F:/AutoBackup/diskd/java/jdbc/db2/db2v9.7.6/db2jcc_license_cu.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>db2jcc4</artifactId>
+			<version>1.0</version> <!-- Adjust this properly -->
+			<scope>system</scope>
+			<systemPath>F:/AutoBackup/diskd/java/jdbc/db2/db2v9.7.6/db2jcc4.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.db2.jcc</groupId>
+			<artifactId>db2jcc</artifactId>
+			<version>1.0</version> <!-- Adjust this properly -->
+			<scope>system</scope>
+			<systemPath>F:/AutoBackup/diskd/java/jdbc/db2/db2v9.7.6/db2jcc.jar</systemPath>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
@@ -68,4 +99,32 @@
 			</plugin>
 		</plugins>
 	</build>
+
+
+	<repositories>
+		<repository>
+			<id>maven.oracle.com</id>
+			<name>oracle-maven-repo</name>
+			<url>https://maven.oracle.com</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</releases>
+		</repository>
+
+	</repositories>
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>maven.oracle.com</id>
+			<name>oracle-maven-repo</name>
+			<url>https://maven.oracle.com</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</releases>
+		</pluginRepository>
+	</pluginRepositories>
 </project>
