--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,4 +34,37 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
+---
+spring:
+  profiles: oracle
+datasource:
+  sampleapp:
+    url: jdbc:oracle:thin:@//10.10.145.97:1521/yyhrpdb
+    username: test1
+    password: test1234
+    driverClassName: oracle.jdbc.driver.OracleDriver
+    defaultSchema:
+    maxPoolSize: 20
+    hibernate:
+      hbm2ddl.method: update
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.Oracle12cDialect
+---
+spring:
+  profiles: db2
+datasource:
+  sampleapp:
+    url: jdbc:db2://192.168.203.155:50001/d1
+    username: db2inst1
+    password: db2inst1
+    driverClassName: com.ibm.db2.jcc.DB2Driver
+    defaultSchema:
+    maxPoolSize: 20
+    hibernate:
+      hbm2ddl.method: update
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.DB2Dialect
+
 
