--- a/pom.xml
+++ b/pom.xml
@@ -58,11 +58,19 @@
     		<version>3.5</version>
 		</dependency>
 
-		<!-- Oracle -->
+		<!-- Oracle
 		<dependency>
 			<groupId>com.oracle.jdbc</groupId>
 			<artifactId>ojdbc8</artifactId>
 			<version>12.2.0.1</version>
+		</dependency>
+ -->
+		<dependency>
+			<groupId>com.oracle.jdbc</groupId>
+			<artifactId>ojdbc7</artifactId>
+			<version>1.0</version> <!-- Adjust this properly -->
+			<scope>system</scope>
+			<systemPath>F:/AutoBackup/diskd/java/jdbc/oracle/12.1.0.2/ojdbc7.jar</systemPath>
 		</dependency>
 
 		<!-- DB2 -->
